<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="rachma.tn.team.binary.rachma.belote.BeloteSetting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="75dp"
                android:layout_gravity="center"

                android:src="@drawable/rachma" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="7dp"
                android:text="@string/belote_setting"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/team1"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/team2"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
            android:orientation="horizontal">

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/team1player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_shape_white"
                android:gravity="center"
                android:hint="@string/player1"
                android:padding="10dp"
                android:textColor="@android:color/black" />

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/team2player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_shape_white"
                android:gravity="center"
                android:hint="@string/player3"
                android:padding="10dp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/team1player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_shape_white"
                android:gravity="center"
                android:hint="@string/player2"
                android:padding="10dp"
                android:textColor="@android:color/black" />


            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/team2player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_shape_white"
                android:gravity="center"
                android:hint="@string/player4"
                android:padding="10dp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/increaseGamesNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:background="#00000000"
                    android:rotation="180"
                    android:src="@drawable/changeplayersnumber" />

                <ImageButton
                    android:id="@+id/decreaseGamesNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/changeplayersnumber" />
            </LinearLayout>

            <TextView
                android:id="@+id/gamesNumber"
                android:layout_width="26dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/games"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <ImageButton
                    android:id="@+id/increasePointsNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:background="#00000000"
                    android:rotation="180"
                    android:src="@drawable/changeplayersnumber" />

                <ImageButton
                    android:id="@+id/decreasePointsNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/changeplayersnumber" />
            </LinearLayout>

            <TextView
                android:id="@+id/pointpergame"
                android:layout_width="113dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="2000"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pointPerGame"
                android:layout_width="135dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="Points"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/black"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>
        </LinearLayout>


        <Button

            android:id="@+id/doneBeloteSetting"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_shape"
            android:fontFamily="monospace"
            android:text="@string/next"

            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


</android.support.v7.widget.LinearLayoutCompat>
