...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/firstPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:id="@+id/firstPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </LinearLayout>

            <!-- Second place -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/secondPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:id="@+id/secondPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </LinearLayout>

            <!-- Third place -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/thirdPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_small" />
...
                    android:fontFamily="serif"
                    android:text="4"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:id="@+id/fourthPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </LinearLayout>


...
                    android:gravity="center"
                    android:orientation="vertical">

                    <!-- Player 1 -->

                    <TextView
                        android:id="@+id/player1nameScoreTaking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_small" />

...
                            android:padding="10dp"
                            android:selectAllOnFocus="true"
                            android:textColor="@color/colorPrimary" />


                        <CheckBox
                            android:id="@+id/player1lost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/lost"
                            android:textColor="@color/black" />

                        <CheckBox
                            android:id="@+id/player1won"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/won"
                            android:textColor="@color/black" />

                    </LinearLayout>


                    <!-- Player 2 -->

                    <TextView
                        android:id="@+id/player2nameScoreTaking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_small" />

...
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="2">


                        <EditText
                            android:id="@+id/player2ScoreScoreTaking"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_shape_white"
                            android:gravity="center"
...
                            android:inputType="number"
                            android:padding="10dp"
                            android:selectAllOnFocus="true"
                            android:textColor="@color/colorPrimary" />

                        <CheckBox
                            android:id="@+id/player2lost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/lost"
                            android:textColor="@color/black" />

                        <CheckBox
                            android:id="@+id/player2won"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/custom_checkbox"
                            android:text="@string/won"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <!-- Player 3 -->

                    <TextView
                        android:id="@+id/player3nameScoreTaking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_small" />

...
                    </LinearLayout>


                    <!-- Player 4 -->

                    <TextView
                        android:id="@+id/player4nameScoreTaking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_small" />

...

                </LinearLayout>


                <!-- Save score Button -->
                <Button
                    android:id="@+id/saveScores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/round_shape"
...
