<resources>
    <string name="app_name">Rachma</string>
    <string name="score">score</string>
    <string name="save_score">Save round score</string>
    <string name="lost">Lost</string>
    <string name="cheat_all_the_players_lost">Do not cheat ! \nAll the players lost the game ?</string>
    <string name="cheat_all_the_players_won">Do not cheat ! \nAll the players won the game ?</string>
    <string name="cheat_no_player_won">Do not cheat ! \nNo player won the game ?</string>
    <string name="cheat_more_than_one_player_won">Do not cheat ! \nMore than one player won the game ?</string>
    <string name="won">Won</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_to_quit">Are you sure to quit ? \nYou will lose all the saved rounds</string>
    <string name="quit_score_taking">Quit</string>
    <string name="please_put_player_score">Please put the score of </string>
    <string name="player">Player</string>
    <string name="invalid_score">Invalid Score</string>
    <string name="two_scores_required">Put at least the score of one team</string>
    <string name="only_one_belote">Only one team could make the Belote !</string>
    <string name="RummySetting">Rummy Setting</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="congratulation">Congratulations !</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="add_score">Add Score</string>
    <string name="belote_setting">Belote Setting</string>
    <string name="player1">Player 1 Name</string>
    <string name="player2">Player 2 Name</string>
    <string name="player3">Player 3 Name</string>
    <string name="player4">Player 3 Name</string>
    <string name="games">Games</string>
    <string name="next">Next</string>
    <string name="undoSaveScore">Undo save score</string>
    <string name="score_history">Score history</string>
    <string name="score_keeping">Score keeping</string>
    <string name="score_stats">Score stats</string>
    <string name="preferences_rummy">Rummy</string>
    <string name="preferences_winner_score">Winner score</string>
    <string name="pref_summary_winner_score">Score to attribute to the winner</string>
    <string name="preferences_loser_score">Loser score</string>
    <string name="pref_summary_loser_score">Score to attribute to the loser</string>
    <string name="preferences_default_rummy_final_score">Default final score</string>
    <string name="pref_summary_default_rummy_final_score">The score to be set by default</string>
    <string name="settings">Settings</string>
    <string name="rummy">Rummy</string>
    <string name="belote">Belote</string>
    <string name="games_navigation_drawer">Games</string>
    <string name="home">Home</string>
    <string name="round_number">Round</string>
</resources>
